--- a/index.html
+++ b/index.html
@@ -13,5 +13,47 @@
     />
     <title>MoGo</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">MoGo</div>
+          <nav class="nav">
+            <ul class="header__nav">
+              <li><a href="" class="nav__link">About</a></li>
+              <li><a href="" class="nav__link">Service</a></li>
+              <li><a href="" class="nav__link">Work</a></li>
+              <li><a href="" class="nav__link">Blog</a></li>
+              <li><a href="" class="nav__link">Contact</a></li>
+              <li><a href="" class="nav__link"></a></li>
+              <li><a href="" class="nav__link"></a></li>
+            </ul>
+          </nav>
+        </div>
+        <!--header__inner  -->
+      </div>
+      <!--container  -->
+    </header>
+    <!--Header  -->
+    <div class="intro">
+      <div class="container">
+        <div class="intro__tittle">
+          <h2>Creative Template</h2>
+          <h1>Welcome to MoGo</h1>
+          <a href="#" class="btn">Learn more</a>
+        </div>
+
+        <div class="slider">
+          <div class="container">
+            <div class="slider__inner">
+              <div class="slider__item">01 <span>Intro</span></div>
+              <div class="slider__item">02 <span>Work</span></div>
+              <div class="slider__item">03 <span>About</span></div>
+              <div class="slider__item">04 <span>Contacts</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
