create block about

--- a/index.html
+++ b/index.html
@@ -53,6 +53,69 @@
             </div>
           </div>
         </div>
+        <!-- Slider -->
+      </div>
+      <!-- Container -->
+    </div>
+    <!-- intro -->
+    <!-- about -->
+    <section class="section">
+      <div class="container">
+        <div class="section__header">
+          <h3 class="section__suptittle">What we do</h3>
+          <h2 class="section__subtittle">Story about us</h2>
+          <div class="section__text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+        </div>
+        <div class="about">
+          <div class="about__item">
+            <div class="about__img">
+              <img src="/img/about/about1.jpg" alt="" />
+            </div>
+            <div class="about__content">
+              <div class="about__icon">
+                <img src="/img/about/about_icon.png" alt="" />
+              </div>
+              <div class="about__text">super team</div>
+            </div>
+          </div>
+          <div class="about__item">
+            <div class="about__img">
+              <img src="/img/about/about2.jpg" alt="" />
+            </div>
+            <div class="about__content">
+              <div class="about__icon">
+                <img src="/img/about/about_icon.png" alt="" />
+              </div>
+              <div class="about__text">super team</div>
+            </div>
+          </div>
+          <div class="about__item">
+            <div class="about__img">
+              <img src="/img/about/about3.jpg" alt="" />
+            </div>
+            <div class="about__content">
+              <div class="about__icon">
+                <img src="/img/about/about_icon.png" alt="" />
+              </div>
+              <div class="about__text">super team</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about -->
+    <div class="facts">
+      <div class="container">
+        <div class="facts__inner">
+          <div class="facts__item"></div>
+        </div>
       </div>
     </div>
   </body>
