--- a/index.html
+++ b/index.html
@@ -114,9 +114,122 @@
     <div class="facts">
       <div class="container">
         <div class="facts__inner">
-          <div class="facts__item"></div>
+          <div class="facts__item">
+            <div class="facts__counter">
+              <div class="fact__count">42</div>
+              <div class="fact__text">Web Design Projects</div>
+            </div>
+          </div>
+          <div class="facts__item">
+            <div class="facts__counter">
+              <div class="fact__count">123</div>
+              <div class="fact__text">happy client</div>
+            </div>
+          </div>
+          <div class="facts__item">
+            <div class="facts__counter">
+              <div class="fact__count">15</div>
+              <div class="fact__text">award winner</div>
+            </div>
+          </div>
+          <div class="facts__item">
+            <div class="facts__counter">
+              <div class="fact__count">99</div>
+              <div class="fact__text">cup of coffee</div>
+            </div>
+          </div>
+          <div class="facts__item">
+            <div class="fact__count">24</div>
+            <div class="fact__text">members</div>
+          </div>
         </div>
       </div>
     </div>
+    <!-- facts -->
+    <section class="section">
+      <div class="container">
+        <div class="section__header">
+          <h3 class="section__suptittle">We work with</h3>
+          <h2 class="section__subtittle">Amazing Services</h2>
+        </div>
+        <div class="services">
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/1.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>Photography</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/2.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>Web Design</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/3.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>Creativity</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <div class="services">
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/4.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>SEO</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/5.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>Css/Html</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+          <div class="service__item">
+            <div class="service__img">
+              <img src="/img/services/6.png" alt="" />
+            </div>
+            <div class="service__content">
+              <h4>Digital</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
