--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--Header  -->
     <div class="intro">
       <div class="container">
-        <div class="intro__tittle">
+        <div class="intro__title">
           <h2>Creative Template</h2>
           <h1>Welcome to MoGo</h1>
           <a href="#" class="btn">Learn more</a>
@@ -62,8 +62,8 @@
     <section class="section">
       <div class="container">
         <div class="section__header">
-          <h3 class="section__suptittle">What we do</h3>
-          <h2 class="section__subtittle">Story about us</h2>
+          <h3 class="section__suptitle">What we do</h3>
+          <h2 class="section__subtitle">Story about us</h2>
           <div class="section__text">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -149,8 +149,8 @@
     <section class="section">
       <div class="container">
         <div class="section__header">
-          <h3 class="section__suptittle">We work with</h3>
-          <h2 class="section__subtittle">Amazing Services</h2>
+          <h3 class="section__suptitle">We work with</h3>
+          <h2 class="section__subtitle">Amazing Services</h2>
         </div>
         <div class="services">
           <div class="service__item">
@@ -227,6 +227,22 @@
                 eiusmod tempor.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section section--device">
+      <div class="container">
+        <div class="section__header">
+          <h3 class="section__suptitle">For all devices</h3>
+          <h2 class="section__subtitle">Unique design</h2>
+        </div>
+        <div class="device">
+          <div class="ipad">
+            <img src="/img/device/ipad.png" alt="" />
+          </div>
+          <div class="iphone">
+            <img src="/img/device/iphone.png" alt="" />
           </div>
         </div>
       </div>
