--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         </div>
       </div>
     </section>
+    <!-- Device -->
     <section class="section section--device">
       <div class="container">
         <div class="section__header">
@@ -246,6 +247,96 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <div class="section__header">
+          <h3 class="section__suptitle">Service</h3>
+          <h2 class="section__subtitle">What we do</h2>
+          <div class="section__text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+        </div>
+        <div class="service2">
+          <div class="service2__item">
+            <img
+              class="service2__picture"
+              src="/img/service2/picture.jpg"
+              alt=""
+            />
+          </div>
+          <div class="service2__item service-accordion">
+            <div class="accordion">
+              <div class="accordion__item active">
+                <div class="accordion__header">
+                  <img
+                    class="accordion__icon"
+                    src="/img/service2/icon1.png"
+                    alt=""
+                  />
+                  <div class="accordion__title">photography</div>
+                  <button class="accordion__btn arrow--up">
+                    <img src="/img/service2/arrow_down.png" alt="" />
+                  </button>
+                </div>
+                <div class="content__box">
+                  <div class="accordion__content">
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                      sint occaecat cupidatat non proident, sunt in culpa qui
+                      officia deserunt mollit anim id est laborum. Duis aute
+                      irure dolor in reprehenderit in voluptate velit esse
+                      cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                      occaecat cupidatat non proident, sunt in culpa qui officia
+                      deserunt mollit anim id est laborum.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__header">
+                  <img
+                    class="accordion__icon"
+                    src="/img/service2/icon2.png"
+                    alt=""
+                  />
+                  <div class="accordion__title">creativity</div>
+                  <button class="accordion__btn arrow--down">
+                    <img src="/img/service2/arrow_down.png" alt="" />
+                  </button>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <div class="accordion__header">
+                  <img
+                    class="accordion__icon"
+                    src="/img/service2/icon3.png"
+                    alt=""
+                  />
+                  <div class="accordion__title">Web Design</div>
+                  <button class="accordion__btn arrow--down">
+                    <img src="/img/service2/arrow_down.png" alt="" />
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Accardion -->
+          </div>
+          <!-- Service2-item -->
+        </div>
+        <!-- Service2 -->
+      </div>
+      <!-- Container -->
     </section>
   </body>
 </html>
